--- a/src/view/layer/Feed.pug
+++ b/src/view/layer/Feed.pug
@@ -33,8 +33,7 @@ style.
 		grid-template-rows 1fr 720px 1fr
 	ol
 		display grid
-		grid-template-columns repeat(3, 240px)
-		grid-template-rows repeat(3, 240px)
+		grid-template-columns repeat(3, 1fr)
 		place-content center
 		&.stickies
 		&.pins
