--- a/src/view/partial/FeedItem.pug
+++ b/src/view/partial/FeedItem.pug
@@ -25,9 +25,9 @@ style.
 		height 100%
 		width 100%
 		padding 3rem
-	a
-		text-decoration none
-		color inherit
+		border 1px solid
+		display grid
+		place-items center
 	.post-title
 		max-height 216px
 		max-width 216px
