--- a/src/view/partial/PostVideo.pug
+++ b/src/view/partial/PostVideo.pug
@@ -24,5 +24,8 @@ audio(bind:this={audio})
 		source(src={representation.href} type={representation.mime_type})
 
 style.
+	video
+		width 854px
+		height 480px
 	audio
 		display none
