--- a/src/view/layer/Post.pug
+++ b/src/view/layer/Post.pug
@@ -8,23 +8,36 @@ svelte:head
 	{#await post.POST.run() then v}
 		title {v.title}
 article
-	AWAIT(let:v p={post.POST})
-		header
-			h1 {v.title}
-		{#if v.content.type === 'post'}
-			p [OTHER POST]
-		{:else}
+	.content
+		AWAIT(let:v p={post.POST})
 			PostContent(content={v.content})
-	AWAIT(let:v p={post.COMMENTS})
-		PostComments(comments={v})
+	.meta
+		AWAIT(let:v p={post.POST})
+			header
+				h1 {v.title}
+				address
+					a(href='/u/{v.author}') {v.author}
+					span {v.subreddit}
+					time {v.created_at.toRelativeString()}
+		AWAIT(let:v p={post.COMMENTS})
+			PostComments(comments={v})
 
 style.
 	article
 		width 100%
+		display grid
+		grid-template-columns 1fr 1fr
+	.content
+		margin 15rem 0
 		display flex
 		flex-flow column nowrap
-		align-items center
-	header
-		margin 5em 0 4em 0
+		align-items flex-end
 	h1
-		font 20px Tahoma
+		font-size 26px
+	header
+		margin 15rem 13rem
+	address
+		display flex
+		flex-flow column nowrap
+		color gray
+		font-size 20px
