--- a/src/view/partial/Image.pug
+++ b/src/view/partial/Image.pug
@@ -31,6 +31,11 @@ script.
 				Math.min(resolution.width, maxWidth)
 	if height is undefined
 		height = width / data.aspect_ratio
+	
+	pixels = width * height
+	if maxPixels < pixels
+		width = width * Math.sqrt(maxPixels / pixels)
+		height = height * Math.sqrt(maxPixels / pixels)
 
 	imgStyle = "height: #{height}px; width: #{width}px"
 
