--- a/src/view/partial/FeedItem.pug
+++ b/src/view/partial/FeedItem.pug
@@ -25,12 +25,9 @@ style.
 		height 100%
 		width 100%
 		padding 3rem
-		border 1px solid
-		display grid
-		place-items center
 	.post-title
 		max-height 216px
 		max-width 216px
 		overflow auto
-		font 20px serif
+		font-size 16px
 		word-break break-word
