--- a/src/view/partial/Image.pug
+++ b/src/view/partial/Image.pug
@@ -51,12 +51,9 @@ figure
 				a(href={data.caption.href}) {data.caption.href}
 
 style.
-	figure
-		position relative
-	figcaption
-		position absolute
-		top 0
-		left 0
-		padding 2rem
-		word-break break-word
-		color orangered
+	aside
+		display flex
+		justify-content space-between
+		margin-bottom 1rem
+	img
+		border 1px solid
