--- a/src/view/partial/PostContent.pug
+++ b/src/view/partial/PostContent.pug
@@ -24,12 +24,13 @@ script.
 
 style.
 	iframe
-		width 854px
-		height 480px
+		width 800px
+		height 450px
 		border 0
 	a
-		max-width 854px
+		max-width 800px
 		padding 10rem
 		border 1px solid
-		font-size 89px
+		font-size 48px
+		font-weight 900
 		word-break break-all
