--- a/src/common.styl
+++ b/src/common.styl
@@ -5,7 +5,8 @@ html
 body
 	margin 0
 	// font
-	font 400 12px/1.333 'Iosevka Aile'
+	font 12px/1.2 'Iosevka Fixed Curly'
+	letter-spacing 0.333px
 	font-feature-settings 'kern'
 	-webkit-font-smoothing antialiased
 	-moz-osx-font-smoothing grayscale
@@ -15,7 +16,7 @@ body
 	--lightgray lightgray
 	--black black
 	--orangered orangered
-	&
+	&.theme-dark
 		--white black
 		--gainsboro #333
 		--black white
@@ -44,22 +45,28 @@ h1, h2, h3, h4, h5, h6
 	margin 0
 ol, ul
 	list-style none
+p
+	margin 0
 img
 video
 	box-sizing content-box
 .md
-	white-space pre-wrap
 	word-break break-word
 	overflow-wrap anywhere
 	blockquote
-		font-style italic
+		margin 0
+		opacity 0.5
 	code
 		font-weight bold
 		color red
 	h1
-		font-size 1.4em
+		font-size 1.333em
+		font-weight 900
 	h2, h3, h4, h5, h6
-		font-size 1.2em
+		font-size 1.1666em
+		font-weight 700
+	hr
+		margin-top 1em
 	ol
 		list-style decimal
 		padding-left 4rem
@@ -70,9 +77,7 @@ video
 		border 1px dashed red
 		overflow auto
 	table
-		font 12px/16px 'Iosevka Aile'
 		overflow-wrap break-word
-		margin 0 0 6px 0
 		border 1px solid
 	td, th
 		padding 0 1ch
@@ -85,7 +90,19 @@ video
 	ul
 		list-style square
 		padding-left 4rem
-		margin 1ch 0
+	* + blockquote,
+	* + code,
+	* + h1,
+	* + h2,
+	* + h3,
+	* + h4,
+	* + h5,
+	* + h6,
+	* + ol,
+	* + p,
+	* + table,
+	* + ul
+		margin-top 1ch
 .hide-scrollbar
 	scrollbar-width none
 	&::-webkit-scrollbar
