--- a/src/view/partial/CommentTree.pug
+++ b/src/view/partial/CommentTree.pug
@@ -24,7 +24,7 @@ script.
 style.
 	.comment
 		display grid
-		grid-template-columns 15rem 1fr
+		grid-template-columns 64px 1fr
 		align-items flex-start
 		margin-bottom 2em
 		max-width 640px
@@ -40,5 +40,5 @@ style.
 		font-size 10px
 		margin-bottom 1rem
 	.replies
-		margin-left 15rem
-		border-left 1px solid gray
+		margin-left 64px
+		border-left 1px solid var(--lightgray)
