--- a/src/view/partial/PostGallery.pug
+++ b/src/view/partial/PostGallery.pug
@@ -1,36 +1,13 @@
 script.
 	export images = []
 	import Image from './Image'
-	current = 0
 
 section
-	nav.previous-images
-		{#each images as image, i}
-			{#if i < current}
-				button(on:mousedown={() => current = i})
-					Image(data={image} height={64})
-	{#key current}
-		Image(data={images[current]} maxWidth={854} maxHeight={854} enableZoom={true})
-	nav.next-images
-		{#each images as image, i}
-			{#if i > current}
-				button(on:mousedown={() => current = i})
-					Image(data={image} height={64})
+	{#each images as image}
+		Image(data={image} maxWidth={800} maxHeight={800} enableZoom={true})
 
 style.
 	section
 		display flex
 		flex-flow column nowrap
 		align-items flex-end
-	nav
-		display none
-		grid-auto-flow column
-		align-items flex-start
-		gap 3rem
-		padding 0 3rem
-	.previous-images
-		justify-content flex-end
-	.next-images
-		justify-content flex-start
-	button
-		height 64px
