--- a/src/view/layer/Post.pug
+++ b/src/view/layer/Post.pug
@@ -27,20 +27,21 @@ style.
 		height 100%
 		width 100%
 		display grid
-		grid-template-columns 1fr 1fr
+		grid-template-columns 50% 50%
 	.content
 		height 100%
 		overflow auto
-		padding 24rem 0
 		display flex
 		flex-flow column nowrap
 		align-items flex-end
 	.meta
 		height 100%
-		padding 24rem 0
+		display grid
+		grid-template-rows 20vh 80vh
 	header
-		width 800px
-		margin 0 15rem
+		margin-left 15rem
+		margin-top 10rem
+		border-bottom 1px solid
 	h1
 		font 26px 'Fabrikat Normal'
 	address
