--- a/src/view/partial/DistinguishTag.pug
+++ b/src/view/partial/DistinguishTag.pug
@@ -9,7 +9,7 @@ script.
 			text = 'MOD'
 		when 'admin'
 			color = 'orangered'
-			text = 'ADMIN'
+			text = 'ADM'
 		when 'special'
 			color = 'crimson'
 			text = 'VIP'
