--- a/src/view/partial/PostGallery.pug
+++ b/src/view/partial/PostGallery.pug
@@ -4,7 +4,7 @@ script.
 
 section
 	{#each images as image}
-		Image(data={image} maxWidth={800} maxHeight={800} enableZoom={true})
+		Image(data={image} minWidth={640} maxWidth={960} enableZoom={true})
 
 style.
 	section
