--- a/src/view/partial/PostComments.pug
+++ b/src/view/partial/PostComments.pug
@@ -4,7 +4,7 @@ script.
 
 section.hide-scrollbar
 	{#each comments as comment}
-		CommentTree(data={comment})
+		CommentTree(comment={comment})
 	{:else}
 		p [No comments.]
 
