Iterate layout; add new relative date phraseology

--- a/src/common.styl
+++ b/src/common.styl
@@ -4,6 +4,9 @@ html
 	font-size 25% // 1rem = 4px
 body
 	margin 0
+	height 100vh
+	display grid
+	grid-template-columns 123px 1fr
 	// font
 	font 12px/1.2 'Iosevka Fixed Curly'
 	letter-spacing 0.333px
@@ -16,6 +19,10 @@ body
 	--lightgray lightgray
 	--black black
 	--orangered orangered
+	--opcolor cornflowerblue
+	--modcolor darkseagreen
+	--admcolor orangered
+	--vipcolor rebeccapurple
 	&.theme-dark
 		--white black
 		--gainsboro #333
