--- a/src/view/frame/App.pug
+++ b/src/view/frame/App.pug
@@ -93,41 +93,42 @@ script.
 
 svelte:head
 	title {layers.last().type}
-{#each layers as layer, i}
-	{#if layer.tapped}
-		main.hide-scrollbar(class:hidden={i < layers.length - 1})
-			Layer(layer={layer})
-{#if layers.last().type !== 'image'}
-	nav
-		ol
-			{#each layers as layer, i}
-				li
-					a(href={layer.href} data-goto-layer={i} class:untapped={!layer.tapped})
-						img
+nav
+	a(href='/' data-goto-layer={0} class:dimmed={layers.length > 1})
+		img.logo-icon
+		{#if layers.length === 1}
+			span.logo-text Ares
+main
+	{#each layers as layer, i}
+		{#if layer.tapped}
+			.layer.hide-scrollbar(class:hidden={i < layers.length - 1})
+				Layer(layer={layer})
 
 style.
 	main
-		position fixed
-		top 0
-		left 0
-		height 100vh
-		width 100vw
+		width 100%
+		height 100%
+	.layer
+		position absolute
+		height 100%
 		overflow auto
 		&.hidden
 			content-visibility hidden
 	nav
-		position fixed
-		top 0
-		bottom 0
 		display flex
-		flex-flow column-reverse nowrap
-		li
-			margin 4rem
+		flex-flow column nowrap
 		a
-			&.untapped
+			margin 4rem
+			&.dimmed
 				opacity 0.5
+				&:hover
+					opacity 1
 			img
 				height 32px
 				width 32px
 				border-radius 50%
-				background orangered
+				background salmon
+			.logo-text
+				font 900 26px 'Fabrikat Normal'
+				letter-spacing -1px
+				color gray
