--- a/src/view/partial/Image.pug
+++ b/src/view/partial/Image.pug
@@ -29,9 +29,9 @@ figure
 				a(href={data.caption.href}) {data.caption.href}
 
 style.
+	img
+		border 1px solid
 	aside
 		display flex
 		justify-content space-between
 		margin-bottom 1rem
-	img
-		border-top 6px solid salmon
