--- a/src/view/partial/PostVideo.pug
+++ b/src/view/partial/PostVideo.pug
@@ -25,7 +25,7 @@ audio(bind:this={audio})
 
 style.
 	video
-		width 800px
-		height 450px
+		width 100%
+		border 1px solid
 	audio
 		display none
