--- a/src/view/partial/PostContent.pug
+++ b/src/view/partial/PostContent.pug
@@ -25,12 +25,13 @@ section.content
 
 style.
 	section
-		margin-top 5rem
+		margin-bottom 5rem
 	iframe
+		width 800px
+		height 450px
 		border 1px solid
 	a
-		padding 10rem
-		font-size 48px
-		font-weight 900
 		word-break break-all
-		border 1px solid
+		display block
+		padding 2em 0
+		font-size 20px
