--- a/src/view/layer/Post.pug
+++ b/src/view/layer/Post.pug
@@ -7,33 +7,36 @@ script.
 svelte:head
 	{#await post.POST.run() then v}
 		title {v.title}
-.post
-	article
-		AWAIT(let:v p={post.POST})
-			header
-				h1 {v.title}
-				address
-					a(href='/u/{v.author}') {v.author}
-					| &nbsp;->&nbsp;
-					span {v.subreddit}
-					| ,&nbsp;
-					time {v.created_at.asHumanReadableAgo()}
-			PostContent(content={v.content})
-		AWAIT(let:v p={post.COMMENTS})
-			PostComments(comments={v})
-	nav
+article
+	AWAIT(let:v p={post.POST})
+		header
+			{#if v.xpost_parent}
+				p Crosspost from ...
+			h1 {v.title}
+			address
+				time {v.created_at.asHumanReadableAgo()}
+				| &nbsp;=&nbsp;
+				a(href='/u/{v.author}') {v.author}
+		PostContent(content={v.content})
+	AWAIT(let:v p={post.COMMENTS})
+		PostComments(comments={v})
 
 style.
-	.post
-		display grid
-		grid-template-columns 1fr 123px
 	article
+		margin 6em
+		box-sizing content-box
 		width 800px
-		padding 6rem 0
-		
+		padding 3em
+		border 1px solid
+		border-radius 2em
+		background var(--white)
 	h1
-		font 26px 'Fabrikat Normal'
+		font 900 27px 'Iosevka Fixed Curly'
+		margin-bottom 1rem
 	address
 		display flex
+		font 900 12px 'Fabrikat Normal'
 		color gray
-		font-size 20px
+		margin-bottom 6rem
+	time
+		text-transform uppercase
