Work on post layout; general refactoring

--- a/src/common.styl
+++ b/src/common.styl
@@ -5,8 +5,8 @@ html
 body
 	margin 0
 	// font
-	font 12px/1.2 'Iosevka Fixed Curly'
-	letter-spacing 0.333px
+	font 500 12px/1.5 'Fabrikat Normal'
+	word-spacing 0.25em
 	font-feature-settings 'kern'
 	-webkit-font-smoothing antialiased
 	-moz-osx-font-smoothing grayscale
