--- a/src/view/partial/Image.pug
+++ b/src/view/partial/Image.pug
@@ -1,29 +1,33 @@
 script.
-	export data = []
-	export minWidth = 0
-	export minHeight = 0
-	export minPixels = 0
-	export maxWidth = Infinity
-	export maxHeight = Infinity
-	export maxPixels = Infinity
+	export image = []
+	export minW = 0
+	export maxW = Infinity
+	export cutW = Infinity
+	export minH = 0
+	export maxH = Infinity
+	export cutH = Infinity
 	export enableZoom = false
 	
-	zoomResolution = data.resolve { maxWidth: Infinity, maxHeight: Infinity, maxPixels: Infinity }
-	resolution = data.resolve { minWidth, minHeight, minPixels, maxWidth, maxHeight, maxPixels }
+	res = image.pick { minW, maxW, cutW, minH, maxH, cutH }
+	maxRes = image.pick {}
 
 	imgStyle = ''
-	if maxWidth < Infinity
-		imgStyle += 'max-width:' + maxWidth + 'px;'
-	if maxHeight < Infinity
-		imgStyle += 'max-height:' + maxHeight + 'px;'
+	if maxW < Infinity
+		imgStyle += 'max-width:' + maxW + 'px;'
+	if res.w > minW and maxH < Infinity
+		imgStyle += 'max-height:' + maxH + 'px;'
 
 figure
 	{#if enableZoom}
-		a(href={zoomResolution.href} title='Click to see image at original size')
-			img(src={resolution.href} style={imgStyle} alt='')
+		a(src={maxRes.u} title='Click to see image at original size')
+			img(src={res.u} style={imgStyle} alt='')
 	{:else}
-		img(src={resolution.href} style={imgStyle} alt='')
-	{#if data.caption}
-		figcaption {data.caption.text}
-			{#if data.caption.href}
-				a(href={data.caption.href}) {data.caption.href}
+		img(src={res.u} style={imgStyle} alt='')
+	{#if image.caption}
+		figcaption {image.caption.t}
+			{#if image.caption.u}
+				a(u={image.caption.u}) {image.caption.u}
+
+style.
+	img
+		border 4px solid black
