--- a/src/view/partial/PostVideo.pug
+++ b/src/view/partial/PostVideo.pug
@@ -25,7 +25,8 @@ audio(bind:this={audio})
 
 style.
 	video
-		width 100%
+		margin 20px 40px
+		height 929px
 		border 1px solid
 	audio
 		display none
